--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/HorasExtras/_GridViewPartial_horas_extras.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/HorasExtras/_GridViewPartial_horas_extras.cshtml
@@ -119,6 +119,14 @@
 
             });
         });
+        settings.Columns.Add(column =>
+        {
+            column.SetDataItemTemplateContent(c =>
+            {
+                ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("ROL_011", "RRHHReportes", new { Area = "Reportes", IdEmpresa = DataBinder.Eval(c.DataItem, "IdEmpresa"), IdNomina_Tipo = DataBinder.Eval(c.DataItem, "IdNomina_Tipo"), IdNomina_TipoLiqui = DataBinder.Eval(c.DataItem, "IdPeriodo"), IdPeriodo = DataBinder.Eval(c.DataItem, "IdPeriodo"), IdHorasExtras= DataBinder.Eval(c.DataItem, "IdHorasExtras") }, Request.Url.Scheme) + "');\"></span>");
+            });
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(4);
+        });
     });
 }
 @grid.Bind(Model).GetHtml()
