--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/ROL_019.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/ROL_019.cshtml
@@ -101,7 +101,9 @@
                     <div class="col-md-12">
                         <div class="form-group">
                             @Html.Action("PivotGridROL_019", new  { Model.IdEmpresa, Model.fecha_ini, Model.fecha_fin,Model.IdEmpleado})
-                            @Html.Partial("ExportSettingsPartial", (Core.Erp.Web.Areas.Reportes.Views.RRHHReportes.PivotGridExportDemoOptions)ViewBag.DemoOptions)
+                            @*@Html.Partial("ExportPartial", (Core.Erp.Web.Areas.Reportes.Views.RRHHReportes.PivotGridExportDemoOptions)ViewBag.DemoOptions)*@
+
+                            
                      </div>
                     </div>
                 </div>
