--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/AnioFiscal/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/AnioFiscal/Nuevo.cshtml
@@ -18,6 +18,8 @@
             </h4>
         </div>
     }
+    @Html.HiddenFor(q => q.info_anio_ctautil.IdEmpresa)
+    @Html.HiddenFor(q => q.info_anio_ctautil.IdanioFiscal)
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-3">
@@ -79,8 +81,8 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="IdCtaCble">Utilidad</label>
-                    @Html.DropDownListFor(q => q.info_anio_ctautil.IdCtaCble, new SelectList(" "), new { @class = "form-control" })
+                    <label for="IdCtaCble">Cuenta contable de utilidad*</label>
+                    @Html.Partial("_CmbCuenta_Anio", Model.info_anio_ctautil.IdCtaCble)
                     @Html.ValidationMessageFor(q => q.info_anio_ctautil.IdCtaCble, "", new { @class = "text-danger" })
                 </div>
             </div>
