--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventario/_GridViewPartial_ingreso_inventario.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/IngresoInventario/_GridViewPartial_ingreso_inventario.cshtml
@@ -2,7 +2,7 @@
 @{
     var grid = Html.DevExpress().GridView(settings => {
         settings.Name = "GridView_ingreso_inventario";
-        settings.CallbackRouteValues = new { Controller = "IngresoInventario", Action = "GridViewPartial_ingreso_inventario" };
+        settings.CallbackRouteValues = new { Controller = "IngresoInventario", Action = "GridViewPartial_ingreso_inventario", fecha_ini = ViewBag.fecha_ini, fecha_fin = ViewBag.fecha_fin };
         settings.KeyFieldName = "IdNumMovi";
         settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
         //Configuración para que la grilla no muestre texto completo
