--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/EgresoInventario/_GridViewPartial_egreso_inventario.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/EgresoInventario/_GridViewPartial_egreso_inventario.cshtml
@@ -4,7 +4,7 @@
     var grid = Html.DevExpress().GridView(settings =>
     {
         settings.Name = "GridView_egreso_inventario";
-        settings.CallbackRouteValues = new { Controller = "EgresoInventario", Action = "GridViewPartial_egreso_inventario" };
+        settings.CallbackRouteValues = new { Controller = "EgresoInventario", Action = "GridViewPartial_egreso_inventario", fecha_ini = ViewBag.fecha_ini, fecha_fin = ViewBag.fecha_fin };
         settings.KeyFieldName = "IdNumMovi";
         settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
         //Configuración para que la grilla no muestre texto completo
