--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaCredito/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaCredito/Nuevo.cshtml
@@ -91,11 +91,18 @@
                 @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
             </div>
         </div>
-        <div class="col-md-12">
+        <div class="col-md-11">
             <div class="form-group">
                 <label for="IdProveedor">Proveedor*</label>
                 @Html.Partial("_CmbProveedor_CXP", Model.IdProveedor)
                 @Html.ValidationMessageFor(q => q.IdProveedor, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="col-md-1">
+            <div class="form-group">
+                <label for=""></label>
+                <a type="button" class="btn btn-primary form-control " href="@Url.Action("Nuevo","Proveedor",new { Area = "CuentasPorPagar", IdEmpresa = Model.IdEmpresa },null)" target="_blank">+</a>
             </div>
         </div>
     </div>
