--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Retencion/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Retencion/Anular.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.CuentasPorPagar.cp_retencion_Info
 @{
-    ViewBag.Title = "Nuevo registro";
+    ViewBag.Title = "Nuevo retención";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
