--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Nuevo.cshtml
@@ -96,6 +96,9 @@
             <li>
                 <a href="#tb_info_adicional" aria-controls="AdministracionPreBajas" role="tab" data-toggle="tab">Información adicional</a>
             </li>
+            <li>
+                <a href="#tb_info_foto" aria-controls="AdministracionPreBajas" role="tab" data-toggle="tab">Foto del empleado</a>
+            </li>
         </ul>
         <!-- Tab panes -->
         <div class="tab-content" style="padding-top: 20px">
@@ -395,8 +398,8 @@
                             </div>
                         </div>
                     </div>
+                </div>
             </div>
-        </div>
 
 
 
@@ -650,8 +653,37 @@
             </div>
 
 
+            <div role="tabpanel" class="tab-pane" id="tb_info_foto">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="form-group">
 
-        </div>
+
+                            @Html.DevExpress().BinaryImage(
+                            settings =>
+                            {
+                                settings.Name = "em_foto";
+                                settings.CallbackRouteValues = new { Controller = "Empleado", Action = "get_imagen" };
+                            }).Bind((Model.em_foto).ToArray()).GetHtml()
+
+
+                            @Html.DevExpress().UploadControl(settings =>
+                       {
+
+                           settings.Name = "UploadControl";
+                           settings.CallbackRouteValues = new { Controller = "Empleado", Action = "UploadControlUpload" };
+                           settings.ShowUploadButton = true;
+                           settings.ShowProgressPanel = true;
+                       }).GetHtml()
+
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+
+                </div>
     </div>
 
     <div class="box-footer">
