--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/DepartamentoPorArea/_GridViewPartial_departamento_area.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/DepartamentoPorArea/_GridViewPartial_departamento_area.cshtml
@@ -73,7 +73,7 @@
         });
 
         settings.Columns.Add("Secuencia").Width=Unit.Percentage(10);
-        settings.Columns.Add("division", "Dovisión").Width = Unit.Percentage(25);
+        settings.Columns.Add("division", "División").Width = Unit.Percentage(25);
         settings.Columns.Add("area", "Área").Width = Unit.Percentage(25);
         settings.Columns.Add("departamento", "Departamento").Width = Unit.Percentage(40);
         ;
