--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_CmbFlujo_Deudas.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_CmbFlujo_Deudas.cshtml
@@ -10,9 +10,10 @@
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
         settings.Properties.TextField = "Descricion";
-        settings.Properties.TextFormatString = "[{0}] {1} - {2}";
+        settings.Properties.TextFormatString = "[{0}] {1}";
         settings.Properties.ValueField = "IdTipoFlujo";
         settings.Properties.ValueType = typeof(decimal);
+        settings.Properties.FilterMinLength = 3;
 
         settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
         settings.Properties.AllowNull = true;
