--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Proveedor/_CmbBanco_Proveedor.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Proveedor/_CmbBanco_Proveedor.cshtml
@@ -10,9 +10,10 @@
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
         settings.Properties.TextField = "ba_descripcion";
-        settings.Properties.TextFormatString = "[{0}] {1} {2}";
+        settings.Properties.TextFormatString = "[{0}] {1}";
         settings.Properties.ValueField = "IdBanco";
         settings.Properties.ValueType = typeof(int);
+        settings.Properties.FilterMinLength = 3;
 
         settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
         settings.Properties.AllowNull = true;
