--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoPorRubro/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoPorRubro/Nuevo.cshtml
@@ -189,7 +189,7 @@
     };
 
     function mostrar_fechas() {
-        var es_indifinido = es_indifinido.GetChecked();
+        var es_indifinido = es_indifinido.GetValue();
         if (es_indifinido == true) {
             $("#col_FechaFin").show();
             $("#col_FechaInicio").show();
