--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Anular.cshtml
@@ -25,7 +25,9 @@
     @Html.HiddenFor(q => q.IdCbteCble_Ogiro)
     @Html.HiddenFor(q => q.IdTipoCbte_Ogiro)
     @Html.HiddenFor(q => q.info_cuota.IdCuota)
+    @Html.HiddenFor(q => q.co_fechaOg)
 
+    
     <div class="row">
         <div class="col-md-6">
             <div class="col-md-12">
